--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet"> 
   <title>Frontend Mentor | 3-column preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,19 +17,69 @@
   </style>
 </head>
 <body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
+  <div class="container">
+    <div class="flex-container">
+      <section class="company__section bg-orange">
+        <div class="company__icon">
+          <img src="./images/icon-sedans.svg" alt="">
+        </div>
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+        <div class="company__title">
+          <h1>Sedans</h1>
+        </div>
 
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
+        <div class="company__description">
+          <p>Choose a sedan for its affordability and excellent fuel
+            economy. Ideal for curising in the city or on your next road trip.
+          </p>
+        </div>
+
+        <div class="company__info">
+          <button class="btn color-orange">Learn More</button>
+        </div>
+      </section>
+
+      <section class="company__section bg-cyan">
+        <div class="company__icon">
+          <img src="./images/icon-suvs.svg" alt="">
+        </div>
+
+        <div class="company__title">
+          <h1>suvs</h1>
+        </div>
+
+        <div class="company__description">
+          <p>Take an SUV for its spacious interior, power and versatility.
+            Perfect for your next family vacation and off-road adventures.
+          </p>
+        </div>
+
+        <div class="company__info">
+          <button class="btn color-cyan">Learn More</button>
+        </div>
+      </section>
+
+      <section class="company__section bg-dark-cyan">
+        <div class="company__icon">
+          <img src="./images/icon-luxury.svg" alt="">
+        </div>
+
+        <div class="company__title">
+          <h1>luxury</h1>
+        </div>
+
+        <div class="company__description">
+          <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+            rental and arrive in style.
+          </p>
+        </div>
+
+        <div class="company__info">
+          <button class="btn color-dark-cyan">Learn More</button>
+        </div>
+      </section>
+    </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
