--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </head>
 <body>
   <div class="container">
-    <div class="flex-container">
-      <section class="company__section bg-orange">
+    <div class="company-container">
+      <section class="company__section-sedan p-20 bg-orange">
         <div class="company__icon">
           <img src="./images/icon-sedans.svg" alt="">
         </div>
@@ -39,7 +39,7 @@
         </div>
       </section>
 
-      <section class="company__section bg-cyan">
+      <section class="company__section-suv p-20 bg-cyan">
         <div class="company__icon">
           <img src="./images/icon-suvs.svg" alt="">
         </div>
@@ -59,7 +59,7 @@
         </div>
       </section>
 
-      <section class="company__section bg-dark-cyan">
+      <section class="company__section-luxury p-20 bg-dark-cyan">
         <div class="company__icon">
           <img src="./images/icon-luxury.svg" alt="">
         </div>
